<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_name"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_video_source"
            style="@style/AutoCompleteTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_video_source"
            android:labelFor="@id/auto_complete_video_source">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_video_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_rows"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_rows">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_columns"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_columns">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_publish_video_on_join"
            style="@style/MaterialSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_video_while_joining" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_publish_audio_on_join"
            style="@style/MaterialSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publish_audio_while_joining" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_mirror_video"
            style="@style/MaterialSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mirror_my_video" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_show_preview_before_join"
            style="@style/MaterialSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_video_preview_before_joining" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_advanced_settings"
            style="@style/MaterialTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_24"
            android:gravity="center_vertical"
            android:text="@string/advanced_settings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/container_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_resolution_width"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_resolution_width">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_resolution_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_resolution_height"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_resolution_height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_resolution_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_codecs"
                style="@style/AutoCompleteTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_codec"
                android:labelFor="@id/auto_complete_codecs">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_codecs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_video_bitrate"
                style="@style/AutoCompleteTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_bitrate"
                android:labelFor="@id/auto_complete_video_bitrate">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_video_bitrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_video_framerate"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_framerate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_video_framerate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_environment"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/environment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_environment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_toggle_leak_canary"
                style="@style/MaterialSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leak_canary" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
