<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/PermissionFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="live.hms.android100ms.ui.home.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="live.hms.android100ms.ui.home.settings.SettingsFragment"
        android:label="@string/settings_fragment"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/PermissionFragment"
        android:name="live.hms.android100ms.ui.home.permission.PermissionFragment"
        android:label="@string/permission_fragment"
        tools:layout="@layout/fragment_permission">

        <action
            android:id="@+id/action_PermissionFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

</navigation>