<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="12dp"
        android:elevation="24dp"
        app:cardElevation="24dp"
        tools:context=".ui.home.permission.PermissionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="165dp"
                android:layout_height="118dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/permission_artwork"
                android:src="@drawable/permission_artwork" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialTextViewHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/permission_heading"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/permission_description"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_grant_permission"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_blue"
                android:text="@string/grant_permissions"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_do_it_later"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_it_later"
                android:textAllCaps="false"
                android:visibility="gone" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>