<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="12dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            style="@style/MaterialTextViewHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/john_doe"
            android:textSize="16sp" />

        <Button
            android:id="@+id/role_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="host"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:drawableEnd="@drawable/ic_settings_24"
            />

        <ImageView
            android:id="@+id/icon_screen_share"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:contentDescription="@string/screen_share"
            android:src="@drawable/ic_mobile_screen_share_24"
            app:tint="@color/white_faded_70" />

        <ImageView
            android:id="@+id/icon_video_off"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/video_status"
            android:src="@drawable/ic_videocam_off_24"
            app:tint="@color/white_faded_70" />

        <ImageView
            android:id="@+id/icon_audio_off"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/audio_status"
            android:src="@drawable/ic_mic_off_24"
            app:tint="@color/white_faded_70" />

    </LinearLayout>

</LinearLayout>